# MFarabi619

./: .clangd  .dir-locals.el  .env.example  .envrc  .gitignore  .gitmodules  .mcp.json  .probe-rs.toml  .rustfmt.toml  .sops.yaml  .tioconfig  .zshrc  CMakeLists.txt  CONTRIBUTING.org  Cargo.toml  DATABASE.org  Dioxus.toml  Embed.toml  INSTALLATION.org  Kconfig  Pulumi.yaml  README.md  Trunk.toml  build.rs  comchan.config.toml  config.nix  configuration.nix  devenv.nix  devenv.yaml  diagram.json  env_spec.sh  espflash.toml  facter.json  flake.nix  generate_readme.py  hardware-configuration.nix  hardware-map.yaml  index.html  manifest.yml  migrations.json  (+19 more)
apps/embedded/: CMakeLists.txt  Cargo.toml  Kconfig  build.rs  lib.rs  manifest.yml  mcumgr.conf  prj.conf  sysbuild.cmake  test.conf  test_main.c  tests.yaml  walter.rs  xiao.rs
apps/embedded/boards/: qemu_riscv32.conf  qemu_riscv32.overlay  walter_procpu.conf  xiao_esp32s3_esp32s3_procpu.conf  xiao_esp32s3_procpu.conf  xiao_esp32s3_procpu_sense.conf  xiao_esp32s3_procpu_sense.overlay
apps/embedded/include/: tc_util_user_override.h
apps/embedded/src/: esp32.conf  kernel.conf  lib.rs  manifest.yml  patches.yml  shell.patch
apps/firmware/: .gdbinit  CMakeLists.txt  Cargo.toml  Kconfig  bdd.rs  build.rs  debug.conf  esp32s3-base.conf  index.html  kernel.conf  lib.rs  log.conf  manifest.yml  prj.conf  probe-rs-meta.ld  ram.conf  rtt.conf  sysbuild.cmake  test.conf  tests.yaml  ui.rs  west.yml
apps/firmware/arch/: cortex_m.rs  xtensa.rs
apps/firmware/boards/: aliases.cmake  esp32_devkitc_esp32_procpu.conf  esp32_devkitc_esp32_procpu.overlay  esp32s3_8048S043_procpu.conf  esp32s3_devkitc_esp32s3_procpu.conf  esp32s3_devkitc_esp32s3_procpu.overlay  esp32s3_devkitc_procpu.conf  nucleo_h723zg.conf  nucleo_h723zg.overlay  qemu_riscv32.conf  stm32f3_disco.conf  walter_esp32s3_procpu.conf  walter_esp32s3_procpu.overlay  walter_procpu.conf  xiao_esp32s3_esp32s3_procpu.conf  xiao_esp32s3_esp32s3_procpu_sense.conf  xiao_esp32s3_esp32s3_procpu_sense.overlay  xiao_esp32s3_procpu_sense.conf
apps/firmware/dtsh/: preferences.ini  theme.ini
apps/firmware/examples/: simulator-minimal.rs
apps/firmware/filesystems/: flash.conf  fs.conf  img.conf  tests.c
apps/firmware/networking/: cellular.rs  mod.rs  modem.conf  nat.conf  pkt.conf  sntp.conf  wifi.conf  wifi.rs
apps/firmware/patches/: patches.yml
apps/firmware/programs/: gpio.conf  i2c.conf  input.conf  mod.rs  sensor.conf  shell.aliases.txt  shell.conf  shell.rs  tui.rs
apps/firmware/services/: mcumgr.conf
apps/firmware/socs/: esp32_procpu.conf  esp32s3_procpu.conf
apps/firmware/src/: build.rs  esp32.conf  icons.rs  lib.rs  manifest.yml  mcuboot.conf  patches.yml  prompt.rs  rust.patch  shell.patch  shell.rs
apps/firmware/sysbuild/: mcuboot.conf
apps/firmware/zephyr/: Kconfig  module.yml  patches.yml
apps/halow-xiao/: CMakeLists.txt  Cargo.toml  lib.rs  prj.conf
apps/lazyzephyr/: Cargo.toml  Trunk.toml  config.yml  index.html  lazyzephyr.conf
apps/lazyzephyr/src/: build.rs  (+12 more)
apps/microtop/: Cargo.toml  Trunk.toml
apps/robot/: lichtblick-layout.json  package.xml  setup.cfg  setup.py
apps/server/: Cargo.toml
apps/tui/: Cargo.toml
apps/walter-router/: CMakeLists.txt  Cargo.toml  Kconfig  lib.rs  patches.yml  prj.conf  ssh.conf  wolfssh_user_settings.h
apps/web/: Cargo.toml  Dioxus.toml  README.md  README.org  build.rs  moon.yml  project.json  rust-toolchain.toml  tailwind-config.js  tailwind.css
apps/xiao/: CMakeLists.txt  Cargo.toml  Kconfig  build.rs  lib.rs  prj.conf
firmware/: .dir-locals.el  .gitignore  CMakeLists.txt  Cargo.toml  Embed.toml  Kconfig  Kconfig.microvisor  build.rs  clippy.toml  memory.stm32.x  notes.org  platformio.ini  prj.conf  rust-toolchain.toml  upload.sh  west.yml  wokwi.toml
firmware/.cargo/: config.toml
firmware/.devcontainer/: devcontainer.json
firmware/boards/: STM32H755_CM7.svd  esp32s3_devkitc_procpu.overlay  m5stack_cores3_procpu.overlay  walter_esp32s3_procpu.conf
firmware/data/: index.html
firmware/disabled/: esp32s3_lcd147b_minimal.rs
firmware/esp32-no-std-demo/: Cargo.toml
firmware/esp32s3/: Cargo.toml
firmware/examples/: blinky.rs  sdcard_read.rs  walter-iot.cpp
firmware/include/: Console.h  config.h  i2c.h  identity.h  led.h
firmware/linker/: discard_defmt.ld  http-resources.ld
firmware/patches/: espressif-hal-mspi-timing.patch  zephyr-lang-rust-embassy-bump.patch  zephyr-lang-rust-ffi-wrappers.patch  zephyr-lang-rust-xtensa.patch  zephyr-ppp-misc-net-log-include.patch  zephyr-shell-prompt-size.patch
firmware/simulator/: Cargo.toml
firmware/src/: Kconfig  apidae_banner_800x480.h  boot.c  boot.rs  cloudevents.rs  commands.rs  config.h  config.rs  diagnostics.rs  home_assistant.rs  led.rs  lib.rs  main.c  main.cpp  mqtt.rs  provisioning.rs  publish.rs  sensors.rs  state.rs  utils.rs  wifi.rs  zephyr_main.rs
firmware/stm32h723zg/: Cargo.toml  Embed.toml
firmware/tests/: CMakeLists.txt  Kconfig  UnityAssertionsReference.md  access_point_connect.rs  ds3231.rs  eeprom.rs  file_server.rs  hello.rs  http_api.rs  i2c.rs  microvisor.rs  neopixel.rs  ntc_formula.rs  ota.rs  ota_probe.rs  prj.conf  scd30.rs  scd4x.rs  sd.rs  sd_card_webpage.rs  sdhost.rs  sntp.rs  spi.rs  test_custom_runner.py  testcase.yaml  unity_config.h  websocket.rs  wifi.rs  wifi_dhcp.rs  wifi_scan.rs
firmware/zephyr/: CMakeLists.txt  Cargo.toml  prj.conf
libs/dioxus-attributes/: Cargo.toml
libs/firmware/: CMakeLists.txt  Cargo.toml  Kconfig  build.rs  default.cmake  esp32.conf  filesystem.conf  flash.conf  flash_init_fix.c  kernel.conf  lib.rs  log.conf  networking.rs  posix.conf  rust-toolchain.toml  rust.conf  shell.conf  west.yml
libs/lazyzephyr/: Cargo.toml
libs/mdbook-gen/: Cargo.toml
libs/mdbook-macro/: Cargo.toml
simulator/: Cargo.toml
simulator/src/: minimal.rs  modifiers.rs
tui/: Cargo.toml  README.org  index.html  notes.org
tui/simulator/: Cargo.toml
tui/src/: main.rs  ui.rs
tui/web/: app.rs  effects.rs
web/: Cargo.toml  tailwind.css
web/assets/: tailwind.css
web/src/: api.rs  main.rs
(+2620 files in other folders)
