[workspace]
resolver = "3"
exclude = ["ml"]
default-members = ["apps/firmware"]
members = [
    "web",
    "tui",
    "apps/server",
    "apps/server/migration",
    "tests/e2e",
    "apps/readme",
    "apps/ceratina",
    "libs/lazyzephyr",
    "apps/lazyzephyr",
    "apps/firmware",
]

[workspace.dependencies]
serde_json = "1"
defmt = "1.0.1"
embedded-io = "0.7.1"
embassy-time = { version = "0.5.0" }
# embassy-time = { version = "0.5.0", features = ["tick-hz-10_000"] }
embassy-executor = "0.10"
embedded-io-async = "0.7.0"
dioxus-sdk-time = "0.7.0"
loco-rs = "0.16.4"
dioxus-primitives.path = "libs/primitives"
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1", features = ["std"] }
ratatui = { version = "0.30.0", default-features = false }
lucide-dioxus = { version = "2.45.0", features = ["all-icons"] }
dioxus = { version = "0.7.7", features = ["router", "fullstack"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
debug = true
# opt-level = 3
opt-level = "s"

[profile.release]
debug = 2         # full debug symbols — adds to binary size, enable for profiling
lto = "fat"
codegen-units = 1 # LLVM can perform better optimizations using a single thread
# opt-level = 3          # max speed — produces 30MB WASM, bad for firmware flash too
opt-level = "z"        # min size — halves WASM (~15MB), better for ESP32 flash. all targets are IO-bound.
incremental = false
overflow-checks = true # was false — silent integer wrapping is dangerous for sensor math
# debug-assertions = false  # already the default for release

[patch.crates-io]
zephyr = { path = "modules/lang/rust/zephyr" }
zephyr-sys = { path = "modules/lang/rust/zephyr-sys" }
zephyr-build = { path = "modules/lang/rust/zephyr-build" }
probe-rs = { git = "https://github.com/probe-rs/probe-rs", rev = "8a7d9ebf9241ac80fca826181c97580f5211ad04" }        # 2026-06-08
probe-rs-target = { git = "https://github.com/probe-rs/probe-rs", rev = "8a7d9ebf9241ac80fca826181c97580f5211ad04" } # 2026-06-08
