[package]
rust-version = "1.88"
edition      = "2024"
version      = "0.1.0"
default-run  = "microvisor"
name         = "firmware"
authors      = ["Mumtahin Farabi"]

[features]
esp32 = []
esp32s3 = []
stm32h723zg = []

[[bin]]
test         = false
name         = "microvisor"
path         = "src/bin/microvisor.rs"
required-features = [ "esp32s3" ]

[[bin]]
test         = false
bench        = false
harness      = false # do not use the built in cargo test harness -> resolve rust-analyzer errors
name         = "ui"
path         = "src/ui/main.rs"
required-features = [ "esp32" ]

[[bin]]
test         = false
bench        = false
harness      = false
name         = "ui-minimal"
path         = "src/bin/ui-minimal.rs"
required-features = [ "esp32" ]

[[bin]]
test         = false
bench        = false
name         = "stm32h723zg"
path         = "src/bin/stm32h723zg.rs"
required-features = [ "stm32h723zg" ]



[[test]]
harness      = false
name         = "hello"

[[test]]
harness      = false
name         = "i2c"
required-features = ["esp32s3"]

[[test]]
harness      = false
name         = "neopixel"
required-features = ["esp32s3"]

[[test]]
harness      = false
name         = "spi"
required-features = ["esp32s3"]

[[test]]
harness      = false
name         = "sdhost"
required-features = ["esp32s3"]

[[test]]
harness      = false
name         = "wifi_scan"
required-features = ["esp32s3"]

[[test]]
harness      = false
name         = "wifi_dhcp"
required-features = ["esp32s3"]

[[test]]
harness      = false
name         = "ota_probe"
required-features = ["esp32s3"]

[[test]]
harness      = false
name         = "filesystem"
path         = "tests/http_api.rs"
required-features = ["esp32s3"]

[[test]]
harness      = false
name         = "ntc_formula"
required-features = ["esp32s3"]

[[test]]
harness      = false
name         = "ds3231"
required-features = ["esp32s3"]

[[test]]
harness      = false
name         = "scd4x"
required-features = ["esp32s3"]

[[test]]
harness      = false
name         = "scd30"
required-features = ["esp32s3"]

[[example]]
test         = false
bench        = false
name         = "neopixel"
path         = "examples/esp32s3/neopixel.rs"

[[example]]
test         = false
bench        = false
name         = "gpio"
path         = "examples/esp32s3/gpio.rs"

[[example]]
test         = false
bench        = false
name         = "i2c"
path         = "examples/esp32s3/i2c.rs"

[[example]]
test         = false
bench        = false
name         = "ch832x"
path         = "examples/esp32s3/ch832x.rs"

[[example]]
test         = false
bench        = false
name         = "wifi_tcp"
path         = "examples/esp32s3/wifi_tcp.rs"
required-features = ["esp32s3"]

[[example]]
test         = false
bench        = false
name         = "access_point"
path         = "examples/esp32s3/access_point.rs"
required-features = ["esp32s3"]

[[example]]
test         = false
bench        = false
name         = "sdcard_read"
path         = "examples/sdcard_read.rs"
required-features = ["esp32s3"]

[[example]]
test         = false
bench        = false
name         = "espota_server"
path         = "examples/esp32s3/espota_server.rs"
required-features = ["esp32s3"]

[[example]]
test         = false
bench        = false
name         = "modbus_sensors"
path         = "examples/esp32s3/modbus_sensors.rs"
required-features = ["esp32s3"]

[[example]]
test         = false
bench        = false
name         = "deep_sleep"
path         = "examples/esp32s3/deep_sleep.rs"
required-features = ["esp32s3"]

[lib]
test         = false

[target.'cfg(target_arch = "xtensa")'.dependencies]
defmt.workspace  = true

[target.'cfg(target_arch = "xtensa")'.dev-dependencies]
embedded-test    = { version = "0.7.0", features = ["defmt", "embassy", "external-executor", "xtensa-semihosting"] }

[target.xtensa-esp32-none-elf.dependencies]
esp-alloc        = "0.9.0"
tui-big-text     = "0.8.2"
embedded-hal-bus = "0.3.0"
critical-section = "1.2.0"
log              = "0.4.27"
libm             = "0.2.16"
mipidsi          = "0.10.0"
time             = { version = "0.3.45", default-features = false }
esp-println      = { version = "0.16.1", features = ["esp32", "log-04"] }
esp-hal          = { version = "~1.0",   features = ["esp32", "log-04", "unstable"] }
mousefood        = { version = "0.5.0",  default-features = false, features = ["fonts"] }
ratatui          = { version = "0.30.0", default-features = false, features = ["all-widgets"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32", "log-04"] }

[target.xtensa-esp32s3-none-elf.dependencies]
# smart-leds             = "0.4.0"   # TODO: update esp-hal-smartled for new esp-hal API
# esp-hal-smartled       = "0.17.0"
embedded-hal           = "1.0.0"
embedded-hal-bus       = "0.3.0"
mipidsi                = "0.10.0"
mousefood              = { version = "0.5.0", default-features = false, features = ["fonts"] }
ratatui                = { version = "0.30.0", default-features = false, features = ["all-widgets"] }
embedded-sdmmc         = { git = "https://github.com/rust-embedded-community/embedded-sdmmc-rs", rev = "c7231ddb3dfe9a67c76f15d150d4b42a0d0c9f70", default-features = false, features = ["defmt-log"] }
bt-hci                 = "0.8.0"
volatile               = "0.4.3"
static_cell            = "2.1.1"
critical-section       = "1.2.0"
embedded-io            = { workspace = true, features = ["defmt"] }
embassy-time           = { workspace = true, features = ["defmt"] }
embassy-executor       = { workspace = true, features = ["defmt"] }
embedded-io-async      = { workspace = true, features = ["defmt"] }
trouble-host           = { version = "0.6.0", features = ["gatt"] }
rtt-target             = { version = "0.6.2", features = ["defmt"] }

esp-alloc              = { version = "0.9.0", features = ["defmt"] }
panic-rtt-target       = { version = "0.2.0", features = ["defmt"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32s3"] }
esp-storage            = { version = "0.5.0", features = ["esp32s3", "nor-flash"] }
esp-hal-ota            = { version = "0.4.6", features = ["esp32s3", "defmt"] }
esp-hal                = { version = "~1.0",  features = ["defmt", "esp32s3", "unstable", "psram"] }
embassy-futures        = "0.1"
embassy-sync           = { version = "0.7", features = ["defmt"] }
chacha20                   = { version = "0.9", default-features = false }
constant_time_eq           = { version = "0.3", default-features = false }
poly1305                   = { version = "0.8", default-features = false }
sha2                       = { version = "0.10", default-features = false }
x25519-dalek               = { version = "2.0", default-features = false }
ed25519-dalek              = { version = "2.1", default-features = false }
rand                       = { version = "0.8", default-features = false }
embassy-net            = { version = "0.9.0", features = ["tcp", "udp", "defmt", "dhcpv4", "dns", "medium-ethernet", "icmp", "auto-icmp-echo-reply"] }
esp-rtos               = { version = "0.2.0", features = ["defmt", "embassy", "esp32s3", "esp-alloc", "esp-radio"] }
esp-radio              = { version = "0.17.0", features = ["ble", "coex", "wifi", "defmt", "esp32s3", "unstable", "esp-alloc"] }
picoserve              = { git = "https://github.com/sammhicks/picoserve", rev = "815ca5b", features = ["embassy", "json"] }
heapless               = { version = "0.8.0", default-features = false, features = ["serde"] }
embedded-storage       = "0.3.1"
async-modbus           = { version = "0.7.0", default-features = false, features = ["embedded-io"] }
ds323x                 = { version = "0.7.0", features = ["defmt"] }
scd4x                  = { version = "0.5.0", default-features = false, features = ["embedded-hal-async"] }
scd30-interface        = { version = "2.0.0", default-features = false, features = ["async", "defmt"] }
sntpc                  = { version = "0.8", default-features = false }
libm                   = "0.2.16"
serde                  = { version = "1", default-features = false, features = ["derive"] }
statig                 = { version = "0.4.1", default-features = false, features = ["macro"] }

# Not imported directly — enables features for embassy-net's transitive smoltcp dep.
smoltcp                = { version = "0.13.0", default-features = false, features = [
  "defmt",
  "multicast",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
  "socket-icmp",
  "proto-dhcpv4",
  "medium-ethernet"
  ]}

[target.thumbv7em-none-eabihf.dependencies]
defmt.workspace             = true
embedded-io.workspace       = true
embedded-io-async.workspace = true
defmt-rtt                   = "1.1"
embassy-sync                = "0.7"
cortex-m-rt                 = "0.7.3"
embedded-hal                = "1.0.0"
embedded-storage            = "0.3.1"
embedded-hal-async          = "1.0.0"
panic-probe                 = { version = "1.0",   features = ["print-defmt"] }
cortex-m                    = { version = "0.7.7", features = ["critical-section-single-core"] }
embassy-time                = { workspace = true,  features = ["defmt", "defmt-timestamp-uptime"] }
embassy-executor            = { workspace = true,  features = ["platform-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-stm32               = { version = "0.4",   features = ["defmt", "stm32h723zg", "unstable-pac", "memory-x", "time-driver-any"] }

# [profile.dev]
# # Rust debug is too slow.
# # For debug builds always builds with some optimization
# opt-level         = "s"
# # Symbols are nice and they don't increase the size on Flash
# # debug             = true
# # opt-level         = 3

# [profile.release]
# debug             = 2
# codegen-units     = 1 # LLVM can perform better optimizations using a single thread
# opt-level         = "s"
# # opt-level         = 3
# lto               = "fat"
# incremental       = false
# overflow-checks   = false
# debug-assertions  = false
