[package]
edition = "2024"
version = "0.1.0"
name = "firmware"
rust-version = "1.88"
default-run = "microvisor"
authors = ["Mumtahin Farabi"]
# Every test must be declared explicitly with `harness = false` because
# `#[embedded_test::tests]` generates its own entry point and we're
# `#![no_std]` — the default cargo test harness tries to link `libtest`
# which doesn't exist without std. Cargo has no way to set `harness`
# globally, so autotests stays off and every new test file needs a
# 4-line `[[test]]` block below.
autotests = false

[[bin]]
test = false
name = "microvisor"
path = "src/bin/microvisor.rs"

# ─── integration tests ──────────────────────────────────────────────────────
# Auto-discovery disabled (see `autotests = false` above). Each new test
# file needs a 4-line `[[test]]` entry here. The `harness = false` flag
# is mandatory — it tells cargo not to inject a libtest-based main() so
# `#[embedded_test::tests]` can generate its own.

[[test]]
harness = false
name = "hello"
path = "tests/hello.rs"

# [[test]]
# harness = false
# name = "ntc_formula"
# path = "tests/ntc_formula.rs"

[[test]]
harness = false
name = "file_server"
path = "tests/file_server.rs"

# [[test]]
# harness = false
# name = "access_point_connect"
# path = "tests/access_point_connect.rs"

# [[test]]
# harness = false
# name = "sd_card_webpage"
# path = "tests/sd_card_webpage.rs"

[[test]]
harness = false
name = "i2c"
path = "tests/i2c.rs"

# [[test]]
# harness = false
# name = "ds3231"
# path = "tests/ds3231.rs"

[[test]]
harness = false
name = "eeprom"
path = "tests/eeprom.rs"

# [[test]]
# harness = false
# name = "scd30"
# path = "tests/scd30.rs"

# [[test]]
# harness = false
# name = "scd4x"
# path = "tests/scd4x.rs"

[[test]]
harness = false
name = "sd"
path = "tests/sd.rs"

[[test]]
harness = false
name = "spi"
path = "tests/spi.rs"

[[test]]
harness = false
name = "http_api"
path = "tests/http_api.rs"

[[test]]
harness = false
name = "ota"
path = "tests/ota.rs"

[[test]]
harness = false
name = "system"
path = "tests/system.rs"

[[test]]
harness = false
name = "wifi"
path = "tests/wifi.rs"

# [[test]]
# harness = false
# name = "sntp"
# path = "tests/sntp.rs"

# [[test]]
# harness = false
# name = "websocket"
# path = "tests/websocket.rs"

# ─── examples ────────────────────────────────────────────────────────────────

# esp_hal_smartled + smart_leds deps commented out — re-enable when crates are updated for new esp-hal
# [[example]]
# test = false
# bench = false
# name = "neopixel"
# path = "examples/esp32s3/neopixel.rs"

[[example]]
test = false
bench = false
name = "gpio"
path = "examples/esp32s3/gpio.rs"

[[example]]
test = false
bench = false
name = "i2c"
path = "examples/esp32s3/i2c.rs"

[[example]]
test = false
bench = false
name = "ch832x"
path = "examples/esp32s3/ch832x.rs"

[[example]]
test = false
bench = false
name = "wifi_tcp"
path = "examples/esp32s3/wifi_tcp.rs"

[[example]]
test = false
bench = false
name = "access_point"
path = "examples/esp32s3/access_point.rs"

[[example]]
test = false
bench = false
name = "sdcard_read"
path = "examples/sdcard_read.rs"

[[example]]
test = false
bench = false
name = "espota_server"
path = "examples/esp32s3/espota_server.rs"

[[example]]
test = false
bench = false
name = "modbus_sensors"
path = "examples/esp32s3/modbus_sensors.rs"

[[example]]
test = false
bench = false
name = "deep_sleep"
path = "examples/esp32s3/deep_sleep.rs"

[[example]]
test = false
bench = false
name = "defmt-tcp"
path = "examples/esp32s3/defmt-tcp.rs"

[[example]]
test = false
bench = false
name = "http_hello"
path = "examples/esp32s3/http_hello.rs"

[[example]]
test = false
bench = false
name = "playground"
path = "examples/esp32s3/playground.rs"

[lib]
test = false

# ─── dependencies ────────────────────────────────────────────────────────────

[target.'cfg(target_arch = "xtensa")'.dependencies]
defmt.workspace = true

[target.'cfg(target_arch = "xtensa")'.dev-dependencies]
embedded-test = { version = "0.7.1", features = [
    "defmt",
    "embassy-010",
    "external-executor",
    "xtensa-semihosting",
] }

[target.xtensa-esp32s3-none-elf.dependencies]
# smart-leds             = "0.4.0"   # TODO: update esp-hal-smartled for new esp-hal API
# esp-hal-smartled       = "0.17.0"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
mipidsi = "0.10.0"
mousefood = { version = "0.5.0", default-features = false, features = [
    "fonts",
] }
ratatui = { version = "0.30.0", default-features = false, features = [
    "all-widgets",
] }
embedded-sdmmc = { git = "https://github.com/rust-embedded-community/embedded-sdmmc-rs", rev = "c7231ddb3dfe9a67c76f15d150d4b42a0d0c9f70", default-features = false, features = [
    "defmt-log",
] }
volatile = "0.4.3"
static_cell = "2.1.1"
critical-section = "1.2.0"
embedded-io = { workspace = true, features = ["defmt"] }
embassy-time = { workspace = true, features = ["defmt"] }
embassy-executor = { workspace = true, features = ["defmt"] }
embedded-io-async = { workspace = true, features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }

esp-alloc = { version = "0.9.0", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32s3"] }
esp-storage = { version = "0.5.0", features = ["esp32s3", "nor-flash"] }
esp-hal-ota = { version = "0.4.6", features = ["esp32s3", "defmt"] }
esp-hal = { version = "~1.0", features = ["defmt", "esp32s3", "unstable"] }
embassy-futures = "0.1"
embassy-sync = { version = "0.7", features = ["defmt"] }
trouble-host = { version = "0.6.0", features = ["gatt"] }
bt-hci = "0.8.0"
chacha20 = { version = "0.9", default-features = false }
constant_time_eq = { version = "0.3", default-features = false }
poly1305 = { version = "0.8", default-features = false }
sha2 = { version = "0.10", default-features = false }
x25519-dalek = { version = "2.0", default-features = false }
ed25519-dalek = { version = "2.1", default-features = false }
rand = { version = "0.8", default-features = false }
embassy-net = { version = "0.9.0", features = [
    "tcp",
    "udp",
    "defmt",
    "dhcpv4",
    "dns",
    "medium-ethernet",
    "icmp",
    "multicast",
    "auto-icmp-echo-reply",
] }
esp-rtos = { version = "0.2.0", features = [
    "defmt",
    "embassy",
    "esp32s3",
    "esp-alloc",
    "esp-radio",
] }
esp-radio = { version = "0.17.0", features = [
    "ble",
    "coex",
    "wifi",
    "defmt",
    "esp32s3",
    "unstable",
    "esp-alloc",
] }
picoserve = { git = "https://github.com/sammhicks/picoserve", rev = "815ca5b", features = [
    "embassy",
    "json",
] }
serde-json-core = { version = "0.6.0", default-features = false }
heapless = { version = "0.8", default-features = false, features = ["serde"] }
embedded-storage = "0.3.1"
async-modbus = { version = "0.7.0", default-features = false, features = [
    "embedded-io",
] }
cat24c32-rs = { git = "https://github.com/PixmaNts/cat24c32-rs", rev = "397187c" }
ds323x = { version = "0.7.0", features = ["defmt"] }
scd4x = { version = "0.5.0", default-features = false, features = [
    "embedded-hal-async",
] }
scd30-interface = { version = "2.0.0", default-features = false, features = [
    "async",
    "defmt",
] }
sntpc = { version = "0.8", default-features = false }
libm = "0.2.16"
serde = { version = "1", default-features = false, features = ["derive"] }

# Not imported directly — enables features for embassy-net's transitive smoltcp dep.
smoltcp = { version = "0.13.0", default-features = false, features = [
    "defmt",
    "multicast",
    "proto-dns",
    "proto-ipv4",
    "socket-dns",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
    "socket-icmp",
    "proto-dhcpv4",
    "medium-ethernet",
] }
