[package]
edition = "2024"
version = "0.1.0"
name = "firmware"
rust-version = "1.88"
authors = ["Mumtahin Farabi"]

[lib]
crate-type = ["lib", "staticlib"]
test = false

[features]
default = ["zephyr"]
zephyr = ["dep:zephyr", "dep:zephyr-build", "dep:log-04", "zephyr/executor-zephyr", "zephyr/time-driver"]

# ─── dependencies ────────────────────────────────────────────────────────────

[target.xtensa-esp32s3-none-elf.dependencies]
static_cell = "2.1.1"
embassy-time = { workspace = true }
embassy-executor = { workspace = true }

[dependencies.zephyr]
version = "0.1.0"
optional = true

[dependencies.log-04]
package = "log"
version = "0.4"
optional = true

[build-dependencies.zephyr-build]
version = "0.1.0"
optional = true
