[package]
publish = false
edition = "2024"
name = "simulator"
default-run = "minimal"

[dependencies]
embedded-graphics-simulator = "0.8.0"
mousefood                   = { version = "0.5.0" , features = ["blink"]}
ratatui                     = { version = "0.30.0", default-features = false }

[[bin]]
name = "minimal"
path = "src/minimal.rs"

[[bin]]
name = "modifiers"
path = "src/modifiers.rs"
